--- a/ui/app/globals.css
+++ b/ui/app/globals.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 /**
@@ -9,20 +9,29 @@ body {
 */
 
 @font-face {
-    font-family: "Marianne";
-    src: local("Marianne"), url("../public/fonts/Marianne/Marianne-Bold.woff") format("woff"), url("../public/fonts/Marianne/Marianne-Bold.woff2") format("woff2");
-    font-weight: 700;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "Marianne";
-    src: local("Marianne"), url("../public/fonts/Marianne/Marianne-Medium.woff") format("woff"), url("../public/fonts/Marianne/Marianne-Medium.woff2") format("woff2");
-    font-weight: 500;
-    font-display: swap;
-  }
-  @font-face {
-    font-family: "Marianne";
-    src: local("Marianne"), url("../public/fonts/Marianne/Marianne-Regular.woff") format("woff"), url("../public/fonts/Marianne/Marianne-Regular.woff2") format("woff2");
-    font-weight: 400;
-    font-display: swap;
-  }
+  font-family: "Marianne";
+  src:
+    local("Marianne"),
+    url("../public/fonts/Marianne/Marianne-Bold.woff") format("woff"),
+    url("../public/fonts/Marianne/Marianne-Bold.woff2") format("woff2");
+  font-weight: 700;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Marianne";
+  src:
+    local("Marianne"),
+    url("../public/fonts/Marianne/Marianne-Medium.woff") format("woff"),
+    url("../public/fonts/Marianne/Marianne-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-display: swap;
+}
+@font-face {
+  font-family: "Marianne";
+  src:
+    local("Marianne"),
+    url("../public/fonts/Marianne/Marianne-Regular.woff") format("woff"),
+    url("../public/fonts/Marianne/Marianne-Regular.woff2") format("woff2");
+  font-weight: 400;
+  font-display: swap;
+}
